Data model cleaned up, compatibility with Java 1.8