@@ -9,7 +9,7 @@ public class ExifMap {
 	private Map<ExifTag, Object> tagToObjects = new EnumMap<>(ExifTag.class);
 
 	public void setIfAbsent(ExifTag exifTag, String value, Object object) {
-		if (value == null || value.isBlank() || value.isEmpty()) {
+		if (value == null || value.trim().isEmpty()) {
 			return;
 		}
 		tagToDescriptions.putIfAbsent(exifTag, value);
